# pandas-config

./: .gitignore  pyproject.toml
pandas/: .pandas.ini.example  configfile.py
tests/: test_loading.py
tests/files/: bad-01.pandas.ini  good-01.pandas.ini
