[project]
name = "pandas-config"
version = "0.2.2"
description = "Configure pandas options simply from an INI file."
homepage = "https://github.com/artscoop/pandas-config"
repository = "https://github.com/artscoop/pandas-config"
authors = [{ name = "Steve Kossouho", email = "1023091+artscoop@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "pandas>=2.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
