[project]
name = "pandas-config"
version = "0.3.0"
description = "Configure pandas options simply from an INI file."
authors = [{ name = "Steve Kossouho", email = "1023091+artscoop@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
]

[project.urls]
homepage = "https://github.com/artscoop/pandas-config"


[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
